<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易纺通</string>
    <string name="action_settings">Settings</string>
    
    <string name="login_username">邮箱/手机/用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_guest">随便逛逛</string>
    
    <string name="title_regist">注册</string>
    <string name="title_person">个人中心</string>
	<string name="btn_logout">退出当前账户</string>
	
	<string name="title_chat">纺织聊</string>
	<string name="hint_mainsearch">搜索产品/企业/人脉</string>
	<string name="hint_search">可根据人名/产品/单位/企业/商会/院校等信息搜索</string>
	<string name="hint_searchresult">点击在结果中搜索</string>
	
	<string name="preference">.tnc</string>
	<string name="pref_username">username</string>
	<string name="notfirsttime">nft</string>
	<string name="preference_offline">.offline</string>
	
	<string name="info21">所属行业：</string>
    <string name="info22">经营模式：</string>
    <string name="info23">所在地区：</string>
    <string name="info31">主营产品/服务：</string>
    <string name="info32">采购产品：</string>
    <string name="info33">详细地址：</string>
    <string name="info40">公司简介：</string>
    <string name="info_map">查看地图</string>
    
    <string name="shop_1">公司介绍</string> 
    <string name="shop_2">联系方式</string>
    <string name="shop_3">产品介绍</string>
    <string name="shop_4">企业形象</string>
    <string name="shop_5">资质证书</string>
    
     <string name="add_personincharge">负责人:</string>
    <string name="add_mainpage">公司主页:</string>
    <string name="add_phone">公司电话:</string>
    <string name="add_fax">公司传真:</string>
    <string name="add_cell">手机:</string>
    <string name="add_remark">备注信息:</string>
    <string name="add_qr">扫一扫上面的二维码，添加收藏</string>
    <string name="add_default">暂无</string>
    
    <string name="product_detail">产品详细</string>
    
    <string name="a_0">个人信息:</string>
    <string name="a_1">居住地:</string>
    <string name="a_2">毕业高校:</string>
    <string name="b_0">联系方式:</string>
    <string name="b_1">手机:</string>
    <string name="b_2">电话:</string>
    <string name="b_3">邮箱:</string>
    <string name="b_4">旺旺:</string>
    <string name="b_5">微信:</string>
    <string name="c_0">业务信息:</string>
    <string name="c_1">所属行业:</string>
    <string name="c_2">主要产品:</string>
    <string name="d_0">单位信息:</string>
    <string name="d_1">职	务:</string>
    <string name="d_2">所属单位:</string>
    <string name="d_3">单位网址:</string>
    <string name="d_4">详细地址:</string>
    
    <string name="no_data_result">没有搜到关键词有关企业，请换关键词试试</string>
    <string name="no_product">暂无产品</string>
    <string name="no_conversation">没有对话</string>
    <string name="no_people">暂无人脉</string>
    
    <string name="clear_history">清空记录</string>
    
    <string name="loading">载入中..</string>
    <string name="load_more">加载更多</string>
    <!-- color -->
    <color name="tab_mainblue">#2f71b4</color>
    <color name="tab_textselected">#fe5636</color>
    <color name="bg_grey_bigcolor">#f1f0f5</color>
    <color name="textcolor_content_title">#333333</color>
    <color name="down_orange">#ff5637</color>
    
    <!-- drawable -->
    <drawable name="divider_h_grey">#c8c8c8</drawable>
    <drawable name="down_field">#dddddd</drawable>
    <drawable name="selected_category">#D1E5FD</drawable>
    <drawable name="bg_grey">#f4f4f4</drawable>
    <drawable name="pic_page_text_bg">#77000000</drawable>
    <drawable name="hsv_frame_bg">#DDFFFFEE</drawable>
    
    <!-- waterfall -->
    <string name="ptr_pull_to_refresh">释放更新</string>
    <string name="ptr_release_to_refresh">释放更新</string>
    <string name="ptr_refreshing">更新中</string>
    <string name="ptr_last_updated">已更新: %1$s</string>    
    
    <!-- qr --> 
    <color name="contents_text">#ff000000</color>
  <color name="encode_view">#ffffffff</color>
  <color name="help_button_view">#ffcccccc</color>
  <color name="help_view">#ff404040</color>
  <color name="possible_result_points">#c0ffff00</color>   
  <color name="result_image_border">#ffffffff</color>
  <color name="result_minor_text">#ffc0c0c0</color>
  <color name="result_points">#c000ff00</color>
  <color name="result_text">#ffffffff</color>
  <color name="result_view">#b0000000</color>
  <color name="sbc_header_text">#ff808080</color>
  <color name="sbc_header_view">#ffffffff</color>
  <color name="sbc_list_item">#fffff0e0</color>
  <color name="sbc_layout_view">#ffffffff</color>
  <color name="sbc_page_number_text">#ff000000</color>
  <color name="sbc_snippet_text">#ff4b4b4b</color>
  <color name="share_text">#ff000000</color>
  <color name="share_view">#ffffffff</color>
  <color name="status_view">#50000000</color>
  <color name="status_text">#ffffffff</color>
  <color name="viewfinder_frame">#ff000000</color>
  <!-- <color name="viewfinder_laser">#ffff0000</color> -->
  <color name="viewfinder_laser">#F99F3E</color> 
  <color name="viewfinder_mask">#60000000</color>
</resources>
