<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:orientation="vertical"
        android:background="@drawable/bg_person_upper"
        
        >
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="@dimen/v_height_titlebar_middle"
            android:padding="@dimen/common_margin"
            >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/backbtnbg"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                />
            <ImageView 
                android:id="@+id/btn_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_goshop"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/common_margin"
                />
            
        </RelativeLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/h_margin_side_middle"
            android:layout_weight="1"
            >
            <ImageView 
                android:id="@+id/img_ic"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_launcher"
                android:layout_marginRight="@dimen/h_margin_side"
                />
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RelativeLayout 
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    >

                    <TextView
                        android:id="@+id/tv_person_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        android:layout_alignParentLeft="true"
                        android:textSize="@dimen/textsize_title" 
                        android:gravity="center_vertical"/>
				<LinearLayout 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:layout_alignParentRight="true"
				    >
				    <ImageView 
                        android:id="@+id/btn_c_coo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/selector_people_coo"
                        android:contentDescription="@id/btn_c_coo"
                        android:layout_weight="42"
                        />
                    <ImageView 
                        android:id="@+id/btn_c_fzl"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/selector_people_fzl"
                        android:adjustViewBounds="true"
                        android:layout_gravity="right"
                        android:contentDescription="@id/btn_c_fzl"
                        android:layout_weight="135"
                        />
                    
				</LinearLayout>
                    
                </RelativeLayout>
                <TextView 
                    android:id="@+id/tv_person_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_detail"
                    android:textColor="@android:color/white"
                    />
                <TextView 
                    android:id="@+id/tv_person_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_detail"
                    android:textColor="@android:color/white"
                    android:lines="1"
                    />
                
            </LinearLayout>
        </LinearLayout>
        <TextView 
            android:id="@+id/tv_person_customizationaltext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/v_height_titlebar"
            android:paddingTop="@dimen/common_margin"
            android:paddingBottom="@dimen/common_margin"
            android:paddingLeft="@dimen/h_margin_side"
            android:textSize="@dimen/textsize_detail"
            android:textColor="@android:color/white"
            android:background="#33000000"
            />
        
    </LinearLayout>
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    >
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@android:color/white"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
	        >
	        <TextView 
	            style="@style/PersonDetail_title"
	            android:text="@string/a_0"
	            />
	        <View style="@style/Divider_horizontal"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	            <TextView 
	                style="@style/PersonDetail_contentLeft"
	                android:text="@string/a_1"
	                />
	            <TextView 
	                android:id="@+id/tv_a_1"
	                style="@style/PersonDetail_contentRight"
	                android:autoLink="phone"
	                android:clickable="true"/>
	        </LinearLayout>
	        <View style="@style/Divider_horizontal_shortleft"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/a_2"/>
	        	<TextView 
	                android:id="@+id/tv_a_2"
	                style="@style/PersonDetail_contentRight"
	                android:autoLink="phone"
	                />
	        </LinearLayout>
	        <View style="@style/Divider_horizontal"/>
	        <TextView 
	            style="@style/PersonDetail_title"
	            android:text="@string/b_0"
	            />    
	        <View style="@style/Divider_horizontal"/>    
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/b_1"/>
	        	<TextView 
	                android:id="@+id/tv_b_1"
	                android:layout_weight="1"
	                android:layout_width="0dp"
	                style="@style/PersonDetail_contentRight"
	                android:linksClickable="true"
	                android:autoLink="phone"
	                android:clickable="true"
	                />
	        	<ImageView 
	        	    android:id="@+id/img_b_1"
	        	    android:layout_width="@dimen/side_littlebtn"
	        	    android:layout_height="@dimen/side_littlebtn"
	        	    android:layout_marginRight="@dimen/common_margin"
	        	    android:layout_gravity="center_vertical"
	        	    android:src="@drawable/tel_selected"/>
	        </LinearLayout>   
	        <View style="@style/Divider_horizontal_shortleft"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/b_2"
	        	    />
	        	<TextView 
	                android:id="@+id/tv_b_2"
	                android:layout_weight="1"
	                android:layout_width="0dp"
	                style="@style/PersonDetail_contentRight"/>
	        	<ImageView 
	        	    android:id="@+id/img_b_2"
	        	    android:layout_width="@dimen/side_littlebtn"
	        	    android:layout_height="@dimen/side_littlebtn"
	        	    android:layout_marginRight="@dimen/common_margin"
	        	    android:layout_gravity="center_vertical"
	        	    android:src="@drawable/tel_selected"
	        	    android:linksClickable="true"
	                android:autoLink="phone"
	                android:clickable="true"
	        	    />
	        </LinearLayout>    
	        <View style="@style/Divider_horizontal_shortleft"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView 
	        	    style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/b_3"/>
	        	<TextView 
	                android:id="@+id/tv_b_3"
	                style="@style/PersonDetail_contentRight"/>
	        </LinearLayout>    
	        <View style="@style/Divider_horizontal_shortleft"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/b_4"/>
	        	<TextView 
	                android:id="@+id/tv_b_4"
	                style="@style/PersonDetail_contentRight"/>
	        </LinearLayout>    
	        <View style="@style/Divider_horizontal_shortleft"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView 
	        	    style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/b_5"/>
	        	<TextView 
	                android:id="@+id/tv_b_5"
	                style="@style/PersonDetail_contentRight"/>
	        </LinearLayout>  
	        <View style="@style/Divider_horizontal"/>
	        <TextView 
	            style="@style/PersonDetail_title"
	            android:text="@string/c_0"
	            />      
	        <View style="@style/Divider_horizontal"/>    
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/c_1"/>
	        	<TextView 
	                android:id="@+id/tv_c_1"
	                style="@style/PersonDetail_contentRight"/>
	        </LinearLayout>     
	        <View style="@style/Divider_horizontal_shortleft"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/c_2"/>
	        	<TextView 
	                android:id="@+id/tv_c_2"
	                style="@style/PersonDetail_contentRight"/>
	        </LinearLayout>     
	        <View style="@style/Divider_horizontal"/>
	        <TextView 
	            style="@style/PersonDetail_title"
	            android:text="@string/d_0"
	            />      
	        <View style="@style/Divider_horizontal"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/d_1"/>
	        	<TextView 
	                android:id="@+id/tv_d_1"
	                style="@style/PersonDetail_contentRight"/>
	        </LinearLayout> 
	        <View style="@style/Divider_horizontal_shortleft"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/d_2"/>
	        	<TextView 
	                android:id="@+id/tv_d_2"
	                style="@style/PersonDetail_contentRight"/>
	        </LinearLayout> 
	        <View style="@style/Divider_horizontal_shortleft"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/d_3"/>
	        	<TextView 
	                android:id="@+id/tv_d_3"
	                style="@style/PersonDetail_contentRight"/>
	        </LinearLayout> 
	        <View style="@style/Divider_horizontal"/>
	        <LinearLayout 
	            style="@style/PersonDetail_layout"
	            >
	        	<TextView style="@style/PersonDetail_contentLeft"
	        	    android:text="@string/d_4"/>
	        	<TextView 
	                android:id="@+id/tv_d_4"
	                style="@style/PersonDetail_contentRight"/>
	        </LinearLayout> 
	        <View style="@style/Divider_horizontal"/>
	    </LinearLayout>
	    
	</ScrollView>
</LinearLayout>
