<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/bg_grey"
    android:padding="10dp"
    >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        	<!-- frame1 -->
		     <LinearLayout 
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical"
		         android:background="@drawable/bg_shape"
		         android:orientation="horizontal"
		         android:padding="10dp"
		         >
		         <TextView 
		             style="@style/Information_content_title"
		             android:text="@string/add_personincharge"
		             />
		         <TextView 
		             android:id="@+id/tv_add11_name"
		             style="@style/Information_content"
		             />
		     </LinearLayout>
		     <!-- frame2 -->
     		<LinearLayout 
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical"
		         android:background="@drawable/bg_shape"
		         android:orientation="vertical"
		         android:layout_marginTop="10dp"
		         >
     		    <LinearLayout 
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical"
		         android:orientation="horizontal"
		         android:padding="10dp"
		         >
		         <TextView 
		             style="@style/Information_content_title"
		             android:text="@string/add_mainpage"
		             />
		         <TextView 
		             android:id="@+id/tv_add21_web"
		             style="@style/Information_content"
		             android:autoLink="web"
		             />
		     	</LinearLayout>
		     	<View 
		            android:layout_width="match_parent"
		            android:layout_height="0.5dp"
		            android:background="@drawable/divider_h_grey"
		            
		            />
     		    <LinearLayout 
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical"
		         android:orientation="horizontal"
		         android:padding="10dp"
		         >
		         <TextView 
		             style="@style/Information_content_title"
		             android:text="@string/add_phone"
		             />
		         <TextView 
		             android:id="@+id/tv_add22_phone"
		             style="@style/Information_content"
		             android:autoLink="phone"
		             />
		     	</LinearLayout>
		     	<View 
		            android:layout_width="match_parent"
		            android:layout_height="0.5dp"
		            android:background="@drawable/divider_h_grey"
		            />
		     	<LinearLayout 
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical"
		         android:orientation="horizontal"
		         android:padding="10dp"
		         >
		         <TextView 
		            style="@style/Information_content_title"
		             android:text="@string/add_fax"
		             />
		         <TextView 
		             android:id="@+id/tv_add23_fax"
		            style="@style/Information_content"
		             />
		     	</LinearLayout>
		     	<View 
		            android:layout_width="match_parent"
		            android:layout_height="0.5dp"
		            android:background="@drawable/divider_h_grey"
		            />
		     	<LinearLayout 
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical"
		         android:orientation="horizontal"
		         android:padding="10dp"
		         >
		         <TextView 
		             style="@style/Information_content_title"
		             android:text="@string/add_cell"
		             />
		         <TextView 
		             android:id="@+id/tv_add24_mobile"
		             style="@style/Information_content"
		             android:autoLink="phone"
		             />
		     	</LinearLayout>
     		</LinearLayout>
     		 <!-- frame3 -->
        	<LinearLayout 
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical"
		         android:background="@drawable/bg_shape"
		         android:orientation="horizontal"
		          android:padding="10dp"
		          android:layout_marginTop="10dp"
		         >
        	    <TextView 
		            style="@style/Information_content_title"
		             android:text="@string/add_remark"
		             />
		         <TextView 
		             android:id="@+id/tv_add3_remark"
		             style="@style/Information_content"
		             />
        	</LinearLayout>
        	 <!-- frame4 -->
        	<LinearLayout 
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
				android:gravity="center"
		         android:background="@drawable/bg_shape"
		         android:orientation="vertical"
		          android:padding="10dp"
		          android:layout_marginTop="10dp"
		         >
        	    <ImageView 
        	        android:id="@+id/img_qr_add"
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:src="@android:drawable/stat_sys_download"
        	        android:contentDescription="@id/img_qr_add"
        	        />
        	    <TextView 
        	        android:layout_width="wrap_content"
        	        android:layout_height="wrap_content"
        	        android:text="@string/add_qr"
        	        android:textColor="@android:color/black"
        	        />
        	</LinearLayout>
    </LinearLayout>
    
</ScrollView>
